# budgie-display-configurator

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  org.buddiesofbudgie.DisplayConfig.desktop
.github/: README.md
data/: org.buddiesofbudgie.DisplayConfig.desktop
src/: .clang-format  CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  backend.cpp  backend.hpp  enums.hpp
src/backend/dbus/schemas/: DisplaySchema.Displays.xml
src/backend/layout/: LayoutManager.hpp  LayoutManagerModel.hpp
src/backend/output/: model.hpp  output.cpp  output.hpp
src/libdisplayconfig/: CMakeLists.txt  backend.cpp  backend.hpp  layout.cpp  layout.hpp  types.cpp  types.hpp
src/libdisplayconfig/dbus/schemas/: DisplaySchema.BatchSystem.xml  DisplaySchema.Config.xml  DisplaySchema.Displays.xml  DisplaySchema.Output.xml  DisplaySchema.OutputMode.xml  DisplaySchema.Outputs.xml
src/libdisplayconfig/enums/: connectionstate.hpp
src/libdisplayconfig/layout/: LayoutManager.cpp  LayoutManager.hpp  LayoutManagerModel.cpp
src/libdisplayconfig/models/: layoutmodel.cpp  layoutmodel.hpp  outputmodel.cpp  outputmodel.hpp
src/libdisplayconfig/output/: model.cpp  model.hpp  output.cpp  output.hpp
src/qml/: LayoutManager.qml  Main.qml  Outputs.qml
